attached convert button

--- a/binary/en.lproj/MainStoryboard.storyboard
+++ b/binary/en.lproj/MainStoryboard.storyboard
@@ -53,7 +53,7 @@
                                     <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                             </button>
-                            <pickerView contentMode="scaleToFill" id="04u-AT-sjh">
+                            <pickerView contentMode="scaleToFill" id="04u-AT-sjh" userLabel="base select">
                                 <rect key="frame" x="84" y="60" width="149" height="216"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                             </pickerView>
@@ -74,14 +74,7 @@
         <class className="thgpViewController" superclassName="UIViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/thgpViewController.h"/>
             <relationships>
-                <relationship kind="action" name="base2:"/>
-                <relationship kind="action" name="base3:"/>
-                <relationship kind="action" name="base4:"/>
-                <relationship kind="action" name="base5:"/>
-                <relationship kind="action" name="base6:"/>
-                <relationship kind="action" name="base7:"/>
-                <relationship kind="action" name="base8:"/>
-                <relationship kind="action" name="base9:"/>
+                <relationship kind="action" name="converter:"/>
                 <relationship kind="outlet" name="inputText" candidateClass="UITextField"/>
                 <relationship kind="outlet" name="outputText" candidateClass="UITextField"/>
             </relationships>
