--- a/binary/en.lproj/MainStoryboard.storyboard
+++ b/binary/en.lproj/MainStoryboard.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="1.1" toolsVersion="2182" systemVersion="11E2520" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" initialViewController="2">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="1.1" toolsVersion="2182" systemVersion="11E53" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" initialViewController="2">
     <dependencies>
         <deployment defaultVersion="1296" identifier="iOS"/>
         <development defaultVersion="4200" identifier="xcode"/>
@@ -56,6 +56,10 @@
                             <pickerView contentMode="scaleToFill" id="04u-AT-sjh" userLabel="base select">
                                 <rect key="frame" x="84" y="60" width="149" height="216"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                                <connections>
+                                    <outlet property="dataSource" destination="2" id="LFH-9f-UIg"/>
+                                    <outlet property="delegate" destination="2" id="hiY-ey-SEF"/>
+                                </connections>
                             </pickerView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
@@ -65,6 +69,7 @@
                     <connections>
                         <outlet property="inputText" destination="6gN-PS-ZX7" id="FQX-mo-kfW"/>
                         <outlet property="outputText" destination="P4n-Rd-Pgd" id="AVp-5h-eDV"/>
+                        <outlet property="singlePicker" destination="04u-AT-sjh" id="1a0-Og-g0z"/>
                     </connections>
                 </viewController>
             </objects>
@@ -77,6 +82,7 @@
                 <relationship kind="action" name="converter:"/>
                 <relationship kind="outlet" name="inputText" candidateClass="UITextField"/>
                 <relationship kind="outlet" name="outputText" candidateClass="UITextField"/>
+                <relationship kind="outlet" name="singlePicker" candidateClass="UIPickerView"/>
             </relationships>
         </class>
     </classes>
